fix: adjusting env on ci test runner

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,5 +28,7 @@ jobs:
           pip install -r requirements-dev.txt
 
       - name: Run tests
+        env:
+          PYTHONPATH: ./notebook
         run: |
-          pytest --cov=src tests/
+          pytest --cov=./tests
